Feat(eos_cli_config_gen): Add FIPS and hostkey.client features to management_ssh (#3571)

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/management-ssh.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/management-ssh.j2
@@ -54,6 +54,15 @@ management ssh
 {%     if management_ssh.hostkey.server is arista.avd.defined %}
    hostkey server {{ management_ssh.hostkey.server | join(" ") }}
 {%     endif %}
+{%     if management_ssh.fips_restrictions is arista.avd.defined(true) %}
+   fips restrictions
+{%     endif %}
+{%     if management_ssh.hostkey.client_strict_checking is arista.avd.defined(true) %}
+   hostkey client strict-checking
+{%     endif %}
+{%     if management_ssh.hostkey.server_cert is arista.avd.defined %}
+   hostkey server cert {{ management_ssh.hostkey.server_cert }}
+{%     endif %}
 {%     if management_ssh.enable is arista.avd.defined(false) %}
    shutdown
 {%     elif management_ssh.enable is arista.avd.defined(true) %}
