Close table row

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/match-list-input.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/match-list-input.j2
@@ -16,7 +16,7 @@
 {%         for match_list in match_list_input.prefix_ipv4 %}
 {%             for prefix in match_list.prefixes %}
 {%                 if loop.first %}
-| {{ match_list.name }} | {{ prefix }}
+| {{ match_list.name }} | {{ prefix }} |
 {%                 else %}
 |   | {{ prefix }} |
 {%                 endif %}
@@ -32,7 +32,7 @@
 {%         for match_list in match_list_input.prefix_ipv6 %}
 {%             for prefix in match_list.prefixes %}
 {%                 if loop.first %}
-| {{ match_list.name }} | {{ prefix }}
+| {{ match_list.name }} | {{ prefix }} |
 {%                 else %}
 |   | {{ prefix }} |
 {%                 endif %}
