Keep list of prefixes as a single row

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/match-list-input.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/match-list-input.j2
@@ -14,13 +14,7 @@
 | Prefix List Name | Prefixes |
 | -------- | ------ |
 {%         for match_list in match_list_input.prefix_ipv4 %}
-{%             for prefix in match_list.prefixes %}
-{%                 if loop.first %}
-| {{ match_list.name }} | {{ prefix }} |
-{%                 else %}
-|   | {{ prefix }} |
-{%                 endif %}
-{%             endfor %}
+| {{ match_list.name }} | {{ match_list.prefixes | arista.avd.default(['-']) | join(', ') }} |
 {%         endfor %}
 {%     endif %}
 {%     if match_list_input.prefix_ipv6 is arista.avd.defined %}
@@ -30,13 +24,7 @@
 | Prefix List Name | Prefixes |
 | -------- | ------ |
 {%         for match_list in match_list_input.prefix_ipv6 %}
-{%             for prefix in match_list.prefixes %}
-{%                 if loop.first %}
-| {{ match_list.name }} | {{ prefix }} |
-{%                 else %}
-|   | {{ prefix }} |
-{%                 endif %}
-{%             endfor %}
+| {{ match_list.name }} | {{ match_list.prefixes | arista.avd.default(['-']) | join(', ') }} |
 {%         endfor %}
 {%     endif %}
 {%     if match_list_input.string is arista.avd.defined %}
