--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/match-list-input.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/match-list-input.j2
@@ -9,7 +9,7 @@
 ### Match-lists
 {%     if match_list_input.prefix_ipv4 is arista.avd.defined %}
 
-#### Match-list Input IPv4-Prefix Summary
+#### Match-list Input IPv4-prefix Summary
 
 | Prefix List Name | Prefixes |
 | ---------------- | -------- |
@@ -19,7 +19,7 @@
 {%     endif %}
 {%     if match_list_input.prefix_ipv6 is arista.avd.defined %}
 
-#### Match-list Input IPv6-Prefix Summary
+#### Match-list Input IPv6-prefix Summary
 
 | Prefix List Name | Prefixes |
 | ---------------- | -------- |
