Feat(eos_cli_config_gen): Extend match lists to support IPv4 and IPv6 (#3770)

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/match-list-input.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/match-list-input.j2
@@ -7,8 +7,28 @@
 {% if match_list_input is arista.avd.defined %}
 
 ### Match-lists
+{%     if match_list_input.prefix_ipv4 is arista.avd.defined %}
 
+#### Match-list Input IPv4-prefix Summary
+
+| Prefix List Name | Prefixes |
+| ---------------- | -------- |
+{%         for match_list in match_list_input.prefix_ipv4 %}
+| {{ match_list.name }} | {{ match_list.prefixes | arista.avd.default(['-']) | join(', ') }} |
+{%         endfor %}
+{%     endif %}
+{%     if match_list_input.prefix_ipv6 is arista.avd.defined %}
+
+#### Match-list Input IPv6-prefix Summary
+
+| Prefix List Name | Prefixes |
+| ---------------- | -------- |
+{%         for match_list in match_list_input.prefix_ipv6 %}
+| {{ match_list.name }} | {{ match_list.prefixes | arista.avd.default(['-']) | join(', ') }} |
+{%         endfor %}
+{%     endif %}
 {%     if match_list_input.string is arista.avd.defined %}
+
 #### Match-list Input String Summary
 
 {%         for match_list in match_list_input.string | arista.avd.natural_sort('name') %}
