Initial documentation generation

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-device-documentation.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos-device-documentation.j2
@@ -93,6 +93,8 @@
 {% include 'documentation/system-l1.j2' %}
 {# Application traffic recognition #}
 {% include 'documentation/application-traffic-recognition.j2' %}
+{# Router Segment-Security #}
+{% include 'documentation/router-segment-security.j2' %}
 {# Router path-selection #}
 {% include 'documentation/router-path-selection.j2' %}
 {# Router L2 VPN #}
