--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-segment-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-segment-security.j2
@@ -7,21 +7,45 @@
 {% if router_segment_security is arista.avd.defined %}
 !
 router segment-security
-{%    if router_segment_security.enabled is arista.avd.defined(true) %}
+{%     if router_segment_security.enabled is arista.avd.defined(true) %}
    no shutdown
-{%    endif %}
-{%    if router_segment_security.policies is arista.avd.defined %}
-{%       for policy in router_segment_security.policies %}
+{%     endif %}
+{%     if router_segment_security.policies is arista.avd.defined %}
+{%         for policy in router_segment_security.policies %}
    !
    policy {{ policy.name }}
-{%          for sequence in policy.sequence_numbers | arista.avd.natural_sort('sequence') %}
-{%             if sequence.action != "next-hop " %}
-{%                set action = sequence.action ~ " stateless" %}
-{%             else %}
-{%                set action = sequence.action ~ " next-hop " ~ sequence.next_hop %}
-{%             endif %}
+{%             for sequence in policy.sequence_numbers | arista.avd.natural_sort('sequence') %}
+{%                 if sequence.action != "next-hop " %}
+{%                     set action = sequence.action ~ " stateless" %}
+{%                 else %}
+{%                     set action = sequence.action ~ " next-hop " ~ sequence.next_hop %}
+{%                 endif %}
       {{ sequence.sequence }} application {{ sequence.application }} action {{ action }}
-{%          endfor %}
-{%       endfor %}
-{%    endif %}
+{%             endfor %}
+{%         endfor %}
+   !
+{%     endif %}
+{%     if router_segment_security.vrfs is arista.avd.defined %}
+{%         for vrf in router_segment_security.vrfs %}
+   vrf {{ vrf.name }}
+{%             for segment in vrf.segments %}
+      segment {{ segment.name }}
+         definition
+{%                 for entry in segment.definition | arista.avd.natural_sort('name') %}
+{%                     if entry.covered is arista.avd.defined %}
+{%                         set host_cli = "match covered prefix-list " %}
+{%                     else %}
+{%                         set host_cli = "match prefix-" %}
+{%                     endif %}
+{%                     set host_cli = host_cli ~ entry.address_family ~ " " ~ entry.name %}
+            {{ host_cli }}
+{%                 endfor %}
+         !
+         policies
+{%                 for entry in segment.policies | arista.avd.natural_sort('name') %}
+            from {{ entry.source }} policy {{ entry.policy }}
+{%                 endfor %}
+{%             endfor %}
+{%         endfor %}
+{%     endif %}
 {% endif %}
