--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/flow-tracking.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/flow-tracking.j2
@@ -47,6 +47,11 @@
 {%                 set count_exporter = tracker.exporters | arista.avd.default([]) | length %}
 {%                 set applied_on = [] %}
 {%                 set table_size = tracker.table_size | arista.avd.default('-') %}
+{%                 for dps_interface in dps_interfaces | arista.avd.default([]) %}
+{%                     if dps_interface.flow_tracker.sampled is arista.avd.defined(tracker.name) %}
+{%                         do applied_on.append(dps_interface.name) %}
+{%                     endif %}
+{%                 endfor %}
 {%                 for ethernet_interface in ethernet_interfaces | arista.avd.default([]) %}
 {%                     if ethernet_interface.flow_tracker.sampled is arista.avd.defined(tracker.name) %}
 {%                         do applied_on.append(ethernet_interface.name) %}
@@ -68,6 +73,11 @@
 {%                     set count_exporter = tracker.exporters | arista.avd.default([]) | length %}
 {%                     set applied_on = [] %}
 {%                     set table_size = tracker.table_size | arista.avd.default('-') %}
+{%                     for dps_interface in dps_interfaces | arista.avd.default([]) %}
+{%                         if dps_interface.flow_tracker.sampled is arista.avd.defined(tracker.name) %}
+{%                             do applied_on.append(dps_interface.name) %}
+{%                         endif %}
+{%                     endfor %}
 {%                     for ethernet_interface in ethernet_interfaces | arista.avd.default([]) %}
 {%                         if ethernet_interface.flow_tracker.sampled is arista.avd.defined(tracker.name) %}
 {%                             do applied_on.append(ethernet_interface.name) %}
@@ -121,6 +131,11 @@
 {%                 set on_interval = tracker.record_export.on_interval | arista.avd.default("-") %}
 {%                 set count_exporter = tracker.exporters | arista.avd.default([]) | length %}
 {%                 set applied_on = [] %}
+{%                 for dps_interface in dps_interfaces | arista.avd.default([]) %}
+{%                     if dps_interface.flow_tracker.hardware is arista.avd.defined(tracker.name) %}
+{%                         do applied_on.append(dps_interface.name) %}
+{%                     endif %}
+{%                 endfor %}
 {%                 for ethernet_interface in ethernet_interfaces | arista.avd.default([]) %}
 {%                     if ethernet_interface.flow_tracker.hardware is arista.avd.defined(tracker.name) %}
 {%                         do applied_on.append(ethernet_interface.name) %}
