--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-segment-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-segment-security.j2
@@ -9,7 +9,9 @@
 ## Group-Based Multi-domain Segmentation Services (MSS-Group)
 
 {%     if router_segment_security.enabled is arista.avd.defined(true) %}
-- MSS-G is enabled.
+MSS-G is enabled.
+{%     else %}
+MSS-G is disabled.
 {%     endif %}
 {%     if router_segment_security.policies is arista.avd.defined %}
 
