--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-general.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-general.j2
@@ -44,7 +44,7 @@ router general
 {%         if router_general.control_functions.code_units is arista.avd.defined %}
 {%             for code_unit in router_general.control_functions.code_units | arista.avd.natural_sort('name') %}
 {%                 set content = code_unit.content %}
-{%                 set content = content | ansible.builtin.regex_replace('.*code\ unit.*', '') %}
+{%                 set content = content | replace('.*code\ unit.*', '') %}
       code unit {{ code_unit.name }}
          {{ content | indent(width=9, first=False) }}
 {%                 if not 'EOF' in content %}
