--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-service-insertion.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-service-insertion.j2
@@ -6,6 +6,8 @@
 {# doc - router service-insertion #}
 {% if router_service_insertion.enabled is arista.avd.defined(true) %}
 
+## Router Service Insertion
+
 Router service-insertion is enabled.
 {%     if router_service_insertion.connections is arista.avd.defined %}
 
