--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-service-insertion.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-service-insertion.j2
@@ -23,7 +23,7 @@ Router service-insertion is enabled.
 {%         endfor %}
 {%         if ethernet_connections %}
 
-### Connections Through Ethernet Interface
+#### Connections Through Ethernet Interface
 
 | Name | Interface | Next Hop | Monitor Connectivity Host |
 | ---- | --------- | -------- | ------------------------- |
