--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-service-insertion.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-service-insertion.j2
@@ -33,7 +33,7 @@ Router service-insertion is enabled.
 {%         endif %}
 {%         if tunnel_connections %}
 
-### Connections Through Tunnel Interface
+#### Connections Through Tunnel Interface
 
 | Name | Primary Interface | Secondary Interface | Monitor Connectivity Host |
 | ---- | ----------------- | ------------------- | ------------------------- |
