--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-service-insertion.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/router-service-insertion.j2
@@ -43,7 +43,7 @@ Router service-insertion is enabled.
 {%         endif %}
 {%     endif %}
 
-## Router Service-Insertion Configuration
+### Router Service Insertion Configuration
 
 ```eos
 {%     include 'eos/router-service-insertion.j2' %}
