Moved compile, commit under control-functions.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-general.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-general.j2
@@ -44,15 +44,18 @@ router general
 {%         if router_general.control_functions.code_units is arista.avd.defined %}
 {%             for code_unit in router_general.control_functions.code_units | arista.avd.natural_sort('name') %}
 {%                 set content = code_unit.content %}
-{%                 set content = content | replace('.*code\ unit.*', '') %}
+{%                 if not content.rstrip().endswith('\nEOF') %}
+{%                     set content = content.rstrip() + "\nEOF\n" %}
+{%                 endif %}
       code unit {{ code_unit.name }}
          {{ content | indent(width=9, first=False) }}
-{%                 if not 'EOF' in content %}
-         EOF
-{%                 endif %}
-         compile
-         commit
 {%             endfor %}
+{%             if router_general.control_functions.compile is arista.avd.defined %}
+      compile
+{%                 if router_general.control_functions.commit is arista.avd.defined %}
+      commit
+{%                 endif %}
+{%             endif %}
    !
 {%         endif %}
 {%     endif %}
