--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
@@ -611,6 +611,12 @@ router bgp {{ router_bgp.as }}
 {%             if peer_group.route_map_out is arista.avd.defined %}
       neighbor {{ peer_group.name }} route-map {{ peer_group.route_map_out }} out
 {%             endif %}
+{%             if peer_group.rcf_in is arista.avd.defined %}
+      neighbor {{ peer_group.name }} rcf in {{ peer_group.rcf_in }}()
+{%             endif %}
+{%             if peer_group.rcf_out is arista.avd.defined %}
+      neighbor {{ peer_group.name }} rcf out {{ peer_group.rcf_out }}()
+{%             endif %}
 {%             if peer_group.activate is arista.avd.defined(true) %}
       neighbor {{ peer_group.name }} activate
 {%             elif peer_group.activate is arista.avd.defined(false) %}
@@ -748,6 +754,12 @@ router bgp {{ router_bgp.as }}
 {%             if peer_group.route_map_out is arista.avd.defined %}
       neighbor {{ peer_group.name }} route-map {{ peer_group.route_map_out }} out
 {%             endif %}
+{%             if peer_group.rcf_in is arista.avd.defined %}
+      neighbor {{ peer_group.name }} rcf in {{ peer_group.rcf_in }}()
+{%             endif %}
+{%             if peer_group.rcf_out is arista.avd.defined %}
+      neighbor {{ peer_group.name }} rcf out {{ peer_group.rcf_out }}()
+{%             endif %}
 {%             if peer_group.prefix_list_in is arista.avd.defined %}
       neighbor {{ peer_group.name }} prefix-list {{ peer_group.prefix_list_in }} in
 {%             endif %}
@@ -786,6 +798,12 @@ router bgp {{ router_bgp.as }}
 {%             if neighbor.route_map_out is arista.avd.defined %}
       neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_out }} out
 {%             endif %}
+{%             if neighbor.rcf_in is arista.avd.defined %}
+      neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}()
+{%             endif %}
+{%             if neighbor.rcf_out is arista.avd.defined %}
+      neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}()
+{%             endif %}
 {%             if neighbor.prefix_list_in is arista.avd.defined %}
       neighbor {{ neighbor.ip_address }} prefix-list {{ neighbor.prefix_list_in }} in
 {%             endif %}
@@ -813,6 +831,22 @@ router bgp {{ router_bgp.as }}
       network {{ network.prefix }} route-map {{ network.route_map }}
 {%             else %}
       network {{ network.prefix }}
+{%             endif %}
+{%         endfor %}
+{%         for redistribute_route in router_bgp.address_family_ipv4.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
+{%             if redistribute_route.source_protocol is arista.avd.defined %}
+{%                 set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
+{%                 if redistribute_route.source_protocol == "bgp" %}
+{%                     set redistribute_route_cli = redistribute_route_cli ~ " leaked" %}
+{%                 elif redistribute_route.include_leaked is arista.avd.defined %}
+{%                     set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
+{%                 endif %}
+{%                 if redistribute_route.source_protocol in ["connected", "static", "isis", "user", "dynamic"] %}
+{%                     if redistribute_route.rcf is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf ~ "()" %}
+{%                     endif %}
+{%                 endif %}
+      {{ redistribute_route_cli }}
 {%             endif %}
 {%         endfor %}
 {%     endif %}
@@ -898,6 +932,12 @@ router bgp {{ router_bgp.as }}
 {%             if peer_group.route_map_out is arista.avd.defined %}
       neighbor {{ peer_group.name }} route-map {{ peer_group.route_map_out }} out
 {%             endif %}
+{%             if peer_group.rcf_in is arista.avd.defined %}
+      neighbor {{ peer_group.name }} rcf in {{ peer_group.rcf_in }}()
+{%             endif %}
+{%             if peer_group.rcf_out is arista.avd.defined %}
+      neighbor {{ peer_group.name }} rcf out {{ peer_group.rcf_out }}()
+{%             endif %}
 {%             if peer_group.prefix_list_in is arista.avd.defined %}
       neighbor {{ peer_group.name }} prefix-list {{ peer_group.prefix_list_in }} in
 {%             endif %}
@@ -916,6 +956,12 @@ router bgp {{ router_bgp.as }}
 {%             endif %}
 {%             if neighbor.route_map_out is arista.avd.defined %}
       neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_out }} out
+{%             endif %}
+{%             if neighbor.rcf_in is arista.avd.defined %}
+      neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}()
+{%             endif %}
+{%             if neighbor.rcf_out is arista.avd.defined %}
+      neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}()
 {%             endif %}
 {%             if neighbor.prefix_list_in is arista.avd.defined %}
       neighbor {{ neighbor.ip_address }} prefix-list {{ neighbor.prefix_list_in }} in
@@ -946,6 +992,10 @@ router bgp {{ router_bgp.as }}
 {%                 endif %}
 {%                 if redistribute_route.route_map is arista.avd.defined %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " route-map " ~ redistribute_route.route_map %}
+{%                 elif redistribute_route.source_protocol in ["connected", "static", "isis", "user", "dynamic"] %}
+{%                     if redistribute_route.rcf is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf ~ "()" %}
+{%                     endif %}
 {%                 endif %}
       {{ redistribute_route_cli }}
 {%             endif %}
